--- a/desafio.html
+++ b/desafio.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Desafio 6</title>
 </head>
 <body>
+  <h1>Modulo 4 - Desafio 6 - Traer posts</h1>
   <button onclick="getPosts()">Traer Posts </button>
   <div id="post-data"></div>
 </body>
